changed map to EsriImagery

--- a/CFL-TELEMAC.ipynb
+++ b/CFL-TELEMAC.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dt = 300\n",
+    "dt = 200\n",
     "df = nodes.assign(\n",
     "    cfl=min_cfl_per_node * dt,\n",
     "    # CFL_violation nodes have a value of 1 if there is no violation and 4 if there is a violation. \n",
@@ -153,7 +153,7 @@
     "    c=\"depth\",\n",
     "    cmap=\"jet\",\n",
     "    geo=True,\n",
-    "    tiles=True,\n",
+    "    tiles=\"EsriImagery\",\n",
     ").options(\n",
     "    width=1200, height=900\n",
     ")\n",
