updated renumber notebooks

--- a/renumber.ipynb
+++ b/renumber.ipynb
@@ -110,17 +110,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!curl https://gist.githubusercontent.com/tomsail/2fc6c0d9544f6354f9822576fb58b4f7/raw/5864569a2f410b621ee07e92b782f21a8fbe4e6c/world_oceans.json -o assets/world_oceans.json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import geopandas as gpd\n",
-    "world_oceans = gpd.read_file(\"assets/world_oceans.json\")\n",
+    "world_oceans = gpd.read_file(\"https://gist.githubusercontent.com/tomsail/2fc6c0d9544f6354f9822576fb58b4f7/raw/5864569a2f410b621ee07e92b782f21a8fbe4e6c/world_oceans.json\")\n",
     "world_oceans.hvplot(color = 'name', width = 1500, height = 900, cmap='tab20c')"
    ]
   },
@@ -252,7 +243,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "there are still some imperfections (i.e. overlaps between the polygons). A simplified version has been done using QGIS. "
+    "there are still some imperfections (i.e. overlaps between the polygons). A simplified version has been done using QGIS and is avaiable on this [gist](https://gist.github.com/tomsail/2fa52d9667312b586e7d3baee123b57b):"
    ]
   },
   {
@@ -261,7 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final = gpd.read_file('assets/world_oceans_final.json')"
+    "final = gpd.read_file('https://gist.githubusercontent.com/tomsail/2fa52d9667312b586e7d3baee123b57b/raw/dcda4d7adfc422481cdaf2b74a9dee53e0a505c0/world_maritime_sectors.json')"
    ]
   },
   {
@@ -272,7 +263,7 @@
    "source": [
     "countries = gpd.read_file(gpd.datasets.get_path('naturalearth_lowres'))\n",
     "map_ = countries.hvplot().opts(alpha=0.1, color='white',line_alpha=0.9)\n",
-    "final.hvplot(color='name').opts(cmap = 'tab20c', width = 1500, height = 900) * map_"
+    "final.hvplot(color='ocean').opts(cmap = 'tab20c', width = 1500, height = 900) * map_"
    ]
   },
   {
