edit compare ts

--- a/compare_TS.ipynb
+++ b/compare_TS.ipynb
@@ -28,12 +28,17 @@
    "outputs": [],
    "source": [
     "ROOT = \"\"\n",
+    "station = \"abur\" #\"abed\"\n",
+    "sensor =  \"rad\" #\"bub\"\n",
     "\n",
-    "obs = pd.read_parquet(ROOT + \"data/obs/abur_rad.parquet\")\n",
-    "sim = pd.read_parquet(ROOT + \"data/models/seareport-v2.2/abur.parquet\")\n",
-    "obs = pd.Series(obs[obs.columns[0]], name = \"obs\")\n",
-    "sim = pd.Series(sim[sim.columns[0]], name = \"sim\")\n",
-    "sim = sim.sort_index()"
+    "def load_ts(station, sensor):\n",
+    "    obs = pd.read_parquet(ROOT + f\"data/obs/{station}_{sensor}.parquet\")\n",
+    "    sim = pd.read_parquet(ROOT + f\"data/models/seareport-v2.2/{station}.parquet\")\n",
+    "    obs = pd.Series(obs[obs.columns[0]], name = \"obs\")\n",
+    "    sim = pd.Series(sim[sim.columns[0]], name = \"sim\")\n",
+    "    sim = sim.sort_index()\n",
+    "    return sim, obs\n",
+    "sim, obs = load_ts(station, sensor)"
    ]
   },
   {
@@ -74,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(obs_subset.hvplot()*sim_subset.hvplot()).opts(width=1300, height=800)"
+    "(obs_subset.hvplot()*sim_subset.hvplot()).opts(width=1300, height=800, title = f\"simple comparison: model vs. observation, station: '{station}'\")"
    ]
   },
   {
@@ -110,7 +115,15 @@
     ")\n",
     "aligned_data = aligned_data.rename(columns={\"obs\": \"obs_aligned\"})\n",
     "aligned_data.sort_index().index.diff().dropna().value_counts()\n",
-    "(obs_subset.hvplot() * aligned_data.hvplot()).opts(width=1300, height = 800)"
+    "(obs_subset.hvplot() * aligned_data.hvplot()).opts(width=1300, height = 800,  title=f\"Method 1. Nearest-Neighbor Alignment, station: '{station}'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8f50bfb1",
+   "metadata": {},
+   "source": [
+    "not insteresting enough to be considered "
    ]
   },
   {
@@ -118,7 +131,7 @@
    "id": "e229ab84",
    "metadata": {},
    "source": [
-    "## 2. Window-Based Aggregation\n",
+    "## Method 2. Window-Based Aggregation\n",
     "\n",
     "**Method**: Use the model timestamps as reference points and aggregate observations within a window\n",
     "\n",
@@ -126,7 +139,7 @@
     " * we can choose between max or mean\n",
     "\n",
     "**Cons**\n",
-    " * We drop some maxima (outside ouf the averaging window)\n",
+    " * We drop some maxima (outside ouf the averaging window) if the window is not adapted\n",
     " * We end loosing information, because dropping data points"
    ]
   },
@@ -137,7 +150,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def aggregate(sim, obs, window_size='5min'):\n",
+    "def aggregate(sim, obs, window_size='7min'):\n",
     "    all_times = pd.DatetimeIndex(sorted(set(sim.index) | set(obs.index)))\n",
     "    \n",
     "    full_obs = pd.Series(np.nan, index=all_times)\n",
@@ -156,7 +169,19 @@
     "    \n",
     "    return result\n",
     "\n",
-    "df_ = aggregate(sim_subset, obs_subset)"
+    "df1 = aggregate(sim_subset, obs_subset)\n",
+    "df1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "575c637e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2 = aggregate(sim_subset, obs_subset, window_size=\"2min\")\n",
+    "df2"
    ]
   },
   {
@@ -166,7 +191,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(obs_subset.hvplot() * sim_subset.hvplot()* df_.obs_max.hvplot()).opts(width=1300, height=800)"
+    "(obs_subset.hvplot() \n",
+    " * sim_subset.hvplot()\n",
+    " * df1.obs_max.hvplot(label = \"obs_max window: 7min\")\n",
+    " * df2.obs_max.hvplot(label = \"obs_max window: 2min\")\n",
+    ").opts(width=1300, height=800, title = f\"Method 2. Window-Based Aggregation, station: '{station}'\")"
    ]
   },
   {
@@ -193,16 +222,23 @@
    "outputs": [],
    "source": [
     "def sim_on_obs(sim, obs):\n",
-    "    sim = sim.copy()\n",
-    "    obs = obs.copy()\n",
+    "    sim = sim.drop_duplicates()\n",
+    "    obs = obs.drop_duplicates()\n",
+    "\n",
     "\n",
     "    df = pd.merge(sim, obs, left_index=True, right_index=True, how='outer')\n",
-    "    df['sim'] = df['sim'].interpolate(method=\"linear\", limit_direction=\"both\")\n",
+    "    df = df.drop_duplicates()\n",
+    "    df = df[~df.index.duplicated(keep='first')]\n",
+    "    print(\"merged df:\")\n",
+    "    print(df.iloc[:30])\n",
+    "    df['sim'] = df['sim'].interpolate(method=\"cubic\", limit_direction=\"both\")\n",
     "    df = df.dropna(subset=['obs'])\n",
     "    \n",
-    "    return df[\"sim\"], df[\"obs\"]\n",
+    "    return df\n",
     "\n",
-    "sim_, obs_ = sim_on_obs(sim_subset, obs_subset)"
+    "df = sim_on_obs(sim_subset, obs_subset)\n",
+    "print(\"final df: \")\n",
+    "df"
    ]
   },
   {
@@ -212,6 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sim_, obs_ = df[\"sim\"], df[\"obs\"]\n",
     "(obs_ == obs_subset).all()"
    ]
   },
@@ -222,13 +259,163 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(obs_.hvplot() * sim_.hvplot(label='model: interpolated') * sim_subset.hvplot(label='model: original')).opts(width=1300, height=800)"
+    "(obs_.hvplot() * sim_.hvplot(label='model: interpolated') * sim_subset.hvplot(label='model: original')).opts(\n",
+    "    width=1300, height=800, title = f\"Method 3. Interpolating model on observation TS, station: '{station}'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ca12633",
+   "metadata": {},
+   "source": [
+    "testing now with a station with a lower sampling rate than the simulation: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea0651c9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station = \"abed\"\n",
+    "sensor = \"bub\"\n",
+    "\n",
+    "sim, obs = load_ts(station, sensor)\n",
+    "sim.sort_index().index.diff().dropna().value_counts()\n",
+    "obs.sort_index().index.diff().dropna().value_counts()\n",
+    "\n",
+    "YEAR = 2024\n",
+    "sim_subset = sim.loc[f\"{YEAR}-01-22\":f\"{YEAR}-02-01\"]\n",
+    "obs_subset = obs.loc[f\"{YEAR}-01-22\":f\"{YEAR}-02-01\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d265a8f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = aggregate(sim_subset, obs_subset)\n",
+    "df\n",
+    "(obs_subset.hvplot() \n",
+    " * sim_subset.hvplot()\n",
+    " * df.obs_max.hvplot(label = \"obs_max window: 7min\")\n",
+    ").opts(width=1300, height=800,  title = f\"Method 2. Window-Based Aggregation, station: '{station}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be994b70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = sim_on_obs(sim_subset, obs_subset)\n",
+    "sim_, obs_ = df[\"sim\"], df[\"obs\"]\n",
+    "(obs_.hvplot() * sim_.hvplot(label='model: interpolated') * sim_subset.hvplot(label='model: original')).opts(\n",
+    "    width=1300, height=800, title = f\"Method 3. Interpolating model on observation TS, station: '{station}'\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2094f51b",
+   "metadata": {},
+   "source": [
+    "Compare stats for the whole series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a37e3d3a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station = \"abur\"\n",
+    "sensor = \"rad\"\n",
+    "\n",
+    "sim, obs = load_ts(station, sensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee7af40e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seastats\n",
+    "df = sim_on_obs(sim, obs)\n",
+    "stats = seastats.get_stats(df[\"sim\"], df[\"obs\"], quantile = 0.)\n",
+    "ext3 = seastats.storms.match_extremes(df[\"sim\"], df[\"obs\"], quantile = 0.99)\n",
+    "m3 = pd.DataFrame(stats, index = [\"method 3\"])\n",
+    "\n",
+    "df = aggregate(sim, obs)\n",
+    "stats = seastats.get_stats(df[\"sim\"], df[\"obs_max\"], quantile = 0.)\n",
+    "ext2 = seastats.storms.match_extremes(df[\"sim\"], df[\"obs_max\"], quantile = 0.99)\n",
+    "m2 = pd.DataFrame(stats, index = [\"method 2\"])\n",
+    "pd.concat([m2,m3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d430ca7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext2.iloc[:5] # method 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83c124a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ext3.iloc[:5] # method 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c28b1a53",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "station = \"abed\"\n",
+    "sensor = \"bub\"\n",
+    "\n",
+    "sim, obs = load_ts(station, sensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38b24248",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seastats\n",
+    "df = sim_on_obs(sim, obs)\n",
+    "stats = seastats.get_stats(df[\"sim\"], df[\"obs\"], quantile = 0.)\n",
+    "ext3 = seastats.storms.match_extremes(df[\"sim\"], df[\"obs\"], quantile = 0.99)\n",
+    "m3 = pd.DataFrame(stats, index = [\"method 3\"])\n",
+    "\n",
+    "df = aggregate(sim, obs)\n",
+    "stats = seastats.get_stats(df[\"sim\"], df[\"obs_max\"], quantile = 0.)\n",
+    "ext2 = seastats.storms.match_extremes(df[\"sim\"], df[\"obs_max\"], quantile = 0.99)\n",
+    "m2 = pd.DataFrame(stats, index = [\"method 2\"])\n",
+    "pd.concat([m2,m3])"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pos_test",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -242,7 +429,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
